syntax = "proto3";

package grpc;

// AircraftId models the unique id of an aircraft in the context of AirMap.
message AircraftId {
  string as_string = 1;  // The textual representation of the id.
}

// AircraftModelId models the unique id of an aircraft model in the context of AirMap.
message AircraftModelId {
  string as_string = 1;  // The textual representation of the id.
}

// AircraftManufacturerId models the unique id of an aircraft manufacturer in the context of AirMap.
message AircraftManufacturerId {
  string as_string = 1;  // The textual representation of the id.
}

// AirspaceId models the unique id of an airspace in the context of AirMap.
message AirspaceId {
  string as_string = 1;  // The textual representation of the id.
}

// AuthorizerId models the unique id of an authorizer in the context of AirMap.
message AuthorizerId {
  string as_string = 1;  // The textual representation of the id.
}

// ClientId models the unique id of a client application in the context of AirMap.
message ClientId {
  string as_string = 1;  // The textual representation of the id.
}

// DeviceId models the unique id of a device in the context of AirMap.
message DeviceId {
  string as_string = 1;  // The textual representation of the id.
}

// FeatureId models the unique id of a feature in the context of AirMap.
message FeatureId {
  uint32 as_uint32 = 1;  // The numeric representation of the id.
}

// FlightId models the unique id of a flight in the context of AirMap.
message FlightId {
  string as_string = 1;  // The textual representation of the id.
}

// FlightPlanId models the unique id of a flight plan in the context of AirMap.
message FlightPlanId {
  string as_string = 1;  // The textual representation of the id.
}

// JurisdictionId models the unique id of a jurisdiction in the context of AirMap.
message JurisdictionId {
  string as_string = 1;  // The textual representation of the id.
}

// PilotId models the unique id of a pilot in the context of AirMap.
message PilotId {
  string as_string = 1;  // The textual representation of the id.
}

// RuleSetId models the unique id of a rule set in the context of AirMap.
message RuleSetId {
  string as_string = 1;  // The textual representation of the id.
}

// TrackId models the unique id of a traffic track in the context of AirMap.
message TrackId {
  string as_string = 1;  // The textual representation of the id.
}

// TrafficSourceId models the unique id of a traffic source in the context of AirMap.
message TrafficSourceId {
  string as_string = 1;  // The textual representation of the id.
}

// TrafficTrackId models the unique id of an individual track for a single vehicle.
message TrafficTrackId {
  string as_string = 1; // The textual representation of the id.
}